--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "argon2": "^0.43.0",
     "drizzle-orm": "^0.44.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
