--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "arctic": "^3.7.0",
     "argon2": "^0.43.0",
     "drizzle-orm": "^0.44.2",
     "jsonwebtoken": "^9.0.2",
