--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
+    "request-ip": "^3.3.0",
     "zod": "^3.25.56"
   }
 }
